--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nodemon ./bin/www",
+    "test": "mocha spec --exit"
   },
   "dependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "codemirror": "^5.49.2",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -14,6 +17,7 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "mocha": "^6.2.2",
     "mongoose": "^5.7.7",
     "morgan": "~1.9.1",
     "nodemon": "^1.19.4"
